# SGNIsoReviewAssistant

./: CMakeLists.txt  datatypes.cpp  datatypes.h  dbinterface.cpp  dbinterface.h  dbnotifier.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  nlohmann_json.hpp  projectpage.cpp  projectpage.h  reviewpage.cpp  reviewpage.h  schedulepage.cpp  schedulepage.h  statusupdater.cpp  statusupdater.h
